<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="apollo_app_forget_pwd">忘记密码？</string>
    <string name="apollo_app_have_accent">已有帐号？</string>
    <string name="apollo_app_have_read_protocal">已阅读《用户协议》</string>
    <string name="apollo_app_hint_user_num">请输入您的手机号</string>
    <string name="apollo_app_loading">加载中...</string>
    <string name="apollo_app_login_now">立即登陆</string>
    <string name="apollo_app_regist">注册</string>
    <string name="apollo_app_regist_checkcode">请输入验证码</string>
    <string name="apollo_app_regist_get_checkcode">获取验证码</string>
    <string name="apollo_app_regist_pwd">请输入密码</string>
    <string name="apollo_app_regist_pwd_againe">请再次输入密码</string>
    <string name="apollo_app_want_regist">我要注册</string>
    <string name="apollo_app_xiayibu">下一步</string>
    <string name="apollo_home_anounce_detatil">homeAnounceWeb</string>
    <string name="apollo_home_app_name">app.apollo_home</string>
    <string name="apollo_home_bananer_detatil">详情</string>
    <string name="apollo_home_bottome_notice">到底了哦</string>
    <string name="apollo_home_change_city">切换城市</string>
    <string name="apollo_home_change_city_choose">请选择已开通服务城市</string>
    <string name="apollo_home_change_city_current">当前城市</string>
    <string name="apollo_home_change_city_location">定位城市</string>
    <string name="apollo_home_citylist_bottom">更多城市即将上线，敬请期待！</string>
    <string name="apollo_home_customer_management">客源管理</string>
    <string name="apollo_home_deal_new">战报</string>
    <string name="apollo_home_first_new">头条</string>
    <string name="apollo_home_index_end">生活的理想，就是为了理想的生活。</string>
    <string name="apollo_home_index_fin">金融顾问</string>
    <string name="apollo_home_index_go_login">去登陆</string>
    <string name="apollo_home_index_go_ver">去实名认证</string>
    <string name="apollo_home_index_loan_num">借款金额</string>
    <string name="apollo_home_index_no_login">您尚未登录，登录后查看您的借款记录</string>
    <string name="apollo_home_index_no_ver">您尚未实名认证，登录后查看您的借款记录</string>
    <string name="apollo_home_index_product_name">产品名称</string>
    <string name="apollo_home_index_product_name_default">安心支付6号</string>
    <string name="apollo_home_index_product_range_default">房产交易已完成但未过户</string>
    <string name="apollo_home_index_product_rate">费率（最低）</string>
    <string name="apollo_home_index_product_use">适用范围</string>
    <string name="apollo_home_index_repay_way">还款方式</string>
    <string name="apollo_home_load_fail">加载失败</string>
    <string name="apollo_home_load_try_again">点击屏幕重试</string>
    <string name="apollo_home_new_customer_search">新客户</string>
    <string name="apollo_home_new_search_empty">关键字不能为空</string>
    <string name="apollo_home_news_headline">战报头条</string>
    <string name="apollo_home_product_">贝壳金控</string>
    <string name="apollo_home_product_decoration">贝壳装修贷</string>
    <string name="apollo_home_ptr_refreshing">刷新中...</string>
    <string name="apollo_home_ptr_release_to_refresh">松开即可刷新</string>
    <string name="apollo_home_regist_gift">注册有礼</string>
    <string name="apollo_home_rent_installment">租金分期</string>
    <string name="apollo_home_search_cancel">取消</string>
    <string name="apollo_home_search_hint">请输入客源编号、姓名或电话</string>
    <string name="apollo_home_search_hint_manager">请输入客源编号、姓名、电话或金融顾问姓名</string>
    <string name="apollo_home_search_history">历史搜索</string>
    <string name="apollo_home_search_null">暂无搜索结果</string>
    <string name="apollo_home_search_result_num">编号：</string>
    <string name="apollo_home_search_result_phone">电话：</string>
    <string name="apollo_home_secure_payment">安心支付</string>
    <string name="apollo_home_see_more">更多</string>
    <string name="apollo_uc_about_app">关于我们</string>
    <string name="apollo_uc_about_title">关于</string>
    <string name="apollo_uc_bankcardlist">我的银行卡</string>
    <string name="apollo_uc_cancel">取消</string>
    <string name="apollo_uc_certi_protocal">用户实名认证协议</string>
    <string name="apollo_uc_certification">实名信息</string>
    <string name="apollo_uc_certification_bank_no">**银行</string>
    <string name="apollo_uc_certification_check_code">验证码</string>
    <string name="apollo_uc_certification_commit">您的实名信息已提交！</string>
    <string name="apollo_uc_certification_comp">我们将在十分钟内审核完成，请耐心等待；审核通过后可继续上传身份证照进一步完善实名信息；您可在“我的-实名信息”中查看您的实名信息。</string>
    <string name="apollo_uc_certification_comp_i_known">我知道了</string>
    <string name="apollo_uc_certification_comp_unite">"　　　　　　您的实名信息已提交！

我们将在十分钟内审核完成，请耐心等待；审核通过后可继续上传身份证照进一步完善实名信息；您可在“我的-实名信息”中查看您的实名信息。"</string>
    <string name="apollo_uc_certification_phone_hint">提示：注册手机号必须为您银行卡预留手机号</string>
    <string name="apollo_uc_certification_phone_no">手机号</string>
    <string name="apollo_uc_certification_state_look_pro">立即查看产品</string>
    <string name="apollo_uc_certification_state_no_pass">很抱歉，您的实名信息未能通过审核！</string>
    <string name="apollo_uc_certification_state_pass">您的实名信息已确认审核通过！</string>
    <string name="apollo_uc_certification_state_re_submit">重新提交实名认证</string>
    <string name="apollo_uc_certification_success">您的实名信息已通过审核！</string>
    <string name="apollo_uc_certificationinfo_bankcard_title">银行卡号</string>
    <string name="apollo_uc_certificationinfo_idcard_title">身份证</string>
    <string name="apollo_uc_certificationinfo_idcardimg_title">身份证照</string>
    <string name="apollo_uc_certificationinfo_idcardno_title">身份证号</string>
    <string name="apollo_uc_certificationinfo_name_title">姓名</string>
    <string name="apollo_uc_certificationinfo_phone_title">手机号</string>
    <string name="apollo_uc_change_department">切换部门</string>
    <string name="apollo_uc_change_role">切换岗位</string>
    <string name="apollo_uc_check_new_version">检测新版本</string>
    <string name="apollo_uc_clear_cache">清理本地缓存</string>
    <string name="apollo_uc_clear_cache_sure">确定清理本地缓存吗？</string>
    <string name="apollo_uc_clear_no_delete">清理后不会删除您的聊天记录</string>
    <string name="apollo_uc_feedback">实名认证</string>
    <string name="apollo_uc_finger_clicktocheck">点此验证</string>
    <string name="apollo_uc_finger_fail_msg">5次解锁失败，指纹密码已关闭，是否需要重新开启？</string>
    <string name="apollo_uc_finger_open_fail">指纹校验失败,请重试</string>
    <string name="apollo_uc_finger_place_check">请验证已有手机指纹</string>
    <string name="apollo_uc_finger_setting">设置手势密码</string>
    <string name="apollo_uc_finger_shutdown_title">确认关闭指纹密码？</string>
    <string name="apollo_uc_fingerprint_bt">请将手指放于指纹识别区域</string>
    <string name="apollo_uc_fingerprint_left_times">指纹校验匹配失败，还可尝试%次</string>
    <string name="apollo_uc_fingerprint_msg">请验证指纹以开通指纹密码</string>
    <string name="apollo_uc_fingerprint_open_fail">指纹校验失败，请重试</string>
    <string name="apollo_uc_fingerprint_open_succ">指纹密码已成功启用</string>
    <string name="apollo_uc_fingerprint_times_tomany">指纹连续5次匹配失败，需要重新登录APP</string>
    <string name="apollo_uc_fingerprint_title">指纹验证</string>
    <string name="apollo_uc_forget_new_password">新密码</string>
    <string name="apollo_uc_forget_pwd">忘记密码？</string>
    <string name="apollo_uc_forget_pwd_title">忘记密码</string>
    <string name="apollo_uc_gesture_bottom_msg">"创建一个手势解锁图案，这样他人在借用你的
手机时，将无法打开贝壳金控"</string>
    <string name="apollo_uc_gesture_forget_msg">忘记手势密码，可使用账号密码登录后重新设置手势密码。</string>
    <string name="apollo_uc_gesture_forget_todo">重新登录</string>
    <string name="apollo_uc_gesture_left_times">绘制手势密码错误，还可尝试%次</string>
    <string name="apollo_uc_gesture_mod_bottom">忘记手势密码</string>
    <string name="apollo_uc_gesture_mod_old_error">绘制解锁密码错误，请重新绘制</string>
    <string name="apollo_uc_gesture_mod_onemore">请再次绘制手势密码进行确认</string>
    <string name="apollo_uc_gesture_mod_title">请先绘制原解锁密码</string>
    <string name="apollo_uc_gesture_set_msg_form">规则：至少连接四个点，每行至少连入一个点</string>
    <string name="apollo_uc_gesture_set_title">绘制解锁密码</string>
    <string name="apollo_uc_gesture_set_title_error">确认失败，请重新确认</string>
    <string name="apollo_uc_gesture_set_title_makesure">确认解锁密码</string>
    <string name="apollo_uc_gesture_set_title_notformal">不符合设置规则，请重新绘制</string>
    <string name="apollo_uc_gesture_shutdown_msg">关闭后您的手势密码记录将被清空，重新启用需要重新设置</string>
    <string name="apollo_uc_have_accent">已有帐号？</string>
    <string name="apollo_uc_have_read_certi_protocal">已阅读并同意《用户实名认证协议》</string>
    <string name="apollo_uc_have_read_protocal">已阅读并同意《用户协议》</string>
    <string name="apollo_uc_hint_invite_code">请输入金融顾问邀请码(选填)</string>
    <string name="apollo_uc_hint_user_num">请输入您的手机号</string>
    <string name="apollo_uc_invite_code">邀请码</string>
    <string name="apollo_uc_login_now">立即登录</string>
    <string name="apollo_uc_regist_checkcode">请输入验证码</string>
    <string name="apollo_uc_regist_get_checkcode">获取验证码</string>
    <string name="apollo_uc_regist_pwd_">请输入不少于8位的字母和数字组合</string>
    <string name="apollo_uc_regist_pwd_againe">请再次输入密码</string>
    <string name="apollo_uc_register_password">密码</string>
    <string name="apollo_uc_register_phone">手机号</string>
    <string name="apollo_uc_register_sure_pwd">确认密码</string>
    <string name="apollo_uc_register_verify_code">验证码</string>
    <string name="apollo_uc_reset_old_pwd">旧密码</string>
    <string name="apollo_uc_string_certification_bank_name">开户银行</string>
    <string name="apollo_uc_string_certification_bankleftphone">请输入您的预留手机号码</string>
    <string name="apollo_uc_string_certification_cardno">请输入您的银行卡号</string>
    <string name="apollo_uc_string_certification_checkcode">请输入您收到的验证码</string>
    <string name="apollo_uc_string_newpwdagain">请再次输入新密码</string>
    <string name="apollo_uc_string_oldpwd">请输入旧密码</string>
    <string name="apollo_uc_string_vertifycode">请输入验证码</string>
    <string name="apollo_uc_sure">确定</string>
</resources>