<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/apollo_uc_c_FFFFFF" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/apollo_uc_line_D4D4D4" android:layout_width="fill_parent" android:layout_height="@dimen/x1" />
    <LinearLayout android:orientation="vertical" android:id="@id/apollo_regist_form_linear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <RelativeLayout android:paddingLeft="@dimen/x40" android:layout_width="fill_parent" android:layout_height="@dimen/x140">
            <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_regist_icon_shouji" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_register_phone" android:layout_centerVertical="true" />
            <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_regist_et_shouji" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x72" android:text="" android:hint="@string/apollo_uc_hint_user_num" android:singleLine="true" android:maxLength="11" android:layout_toRightOf="@id/apollo_regist_icon_shouji" android:layout_centerVertical="true" android:inputType="number" />
            <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginRight="@dimen/x40" android:layout_alignParentBottom="true" android:alpha="0.2" />
        </RelativeLayout>
        <RelativeLayout android:paddingLeft="@dimen/x40" android:layout_width="fill_parent" android:layout_height="@dimen/x140">
            <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_regist_icon_mima" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_register_password" android:layout_centerVertical="true" />
            <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_regist_et_mima" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x100" android:text="" android:hint="@string/apollo_uc_regist_pwd_" android:singleLine="true" android:maxLength="16" android:layout_toRightOf="@id/apollo_regist_icon_mima" android:layout_centerVertical="true" android:inputType="textPassword" />
            <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginRight="@dimen/x40" android:layout_alignParentBottom="true" android:alpha="0.2" />
        </RelativeLayout>
        <RelativeLayout android:paddingLeft="@dimen/x40" android:layout_width="fill_parent" android:layout_height="@dimen/x140">
            <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_regist_icon_mima_agien" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_register_sure_pwd" android:layout_centerVertical="true" />
            <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_regist_et_mima_agien" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x40" android:text="" android:hint="@string/apollo_uc_regist_pwd_againe" android:singleLine="true" android:maxLength="16" android:layout_toRightOf="@id/apollo_regist_icon_mima_agien" android:layout_centerVertical="true" android:inputType="textPassword" />
            <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginRight="@dimen/x40" android:layout_alignParentBottom="true" android:alpha="0.2" />
        </RelativeLayout>
        <RelativeLayout android:paddingLeft="@dimen/x40" android:layout_width="fill_parent" android:layout_height="@dimen/x140">
            <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_regist_icon_yanzheng" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_register_verify_code" android:layout_centerVertical="true" android:layout_alignParentStart="true" />
            <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_regist_et_yanzheng" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x72" android:text="" android:hint="@string/apollo_uc_regist_checkcode" android:singleLine="true" android:maxLength="6" android:layout_toRightOf="@id/apollo_regist_icon_yanzheng" android:layout_centerVertical="true" android:inputType="number" />
            <TextView android:enabled="false" android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_color_get_code" android:gravity="center" android:id="@id/apollo_regist_get_checkcode" android:background="@drawable/apollo_uc_register_btn_selector" android:clickable="true" android:layout_width="@dimen/x168" android:layout_height="@dimen/x68" android:layout_marginRight="@dimen/x40" android:text="@string/apollo_uc_regist_get_checkcode" android:maxLines="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginRight="@dimen/x40" android:layout_alignParentBottom="true" android:alpha="0.2" />
        </RelativeLayout>
        <RelativeLayout android:paddingLeft="@dimen/x40" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/x140">
            <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_regist_icon_invite_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_invite_code" android:layout_centerVertical="true" />
            <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_regist_et_invite_code" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x40" android:text="" android:hint="@string/apollo_uc_hint_invite_code" android:singleLine="true" android:maxLength="16" android:layout_toRightOf="@id/apollo_regist_icon_invite_code" android:layout_centerVertical="true" android:inputType="number" />
            <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginRight="@dimen/x40" android:layout_alignParentBottom="true" android:alpha="0.2" />
        </RelativeLayout>
        <RelativeLayout android:paddingLeft="@dimen/x40" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x30">
            <CheckBox android:id="@id/apollo_regist_checkbox" android:background="@drawable/apollo_uc_checkbox_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:button="@null" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textColor="@color/apollo_uc_c_666666" android:id="@id/apollo_regist_userProtocal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x20" android:text="@string/apollo_uc_have_read_protocal" android:layout_toRightOf="@id/apollo_regist_checkbox" android:layout_centerVertical="true" />
        </RelativeLayout>
        <Button android:enabled="false" android:textSize="@dimen/x36" android:textColor="@color/apollo_uc_c_FFFFFF" android:layout_gravity="center_horizontal" android:id="@id/apollo_uc_regist_bt" android:background="@drawable/apollo_uc_register_btn_selector" android:layout_width="@dimen/x670" android:layout_height="@dimen/x100" android:layout_marginTop="@dimen/x36" android:text="@string/apollo_uc_sure" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/x100" android:layout_alignParentBottom="true">
        <TextView android:id="@id/apollo_regist_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_have_accent" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_regist_login_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_login_now" android:layout_toRightOf="@id/apollo_regist_login" android:layout_centerVertical="true" />
    </LinearLayout>
</RelativeLayout>