<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/apollo_certification_title_linear"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/x130">
        <TextView android:textSize="@dimen/x32" android:textColor="@color/apollo_uc_c_59A3FF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x40" android:text="@string/apollo_uc_certificationinfo_bankcard_title" android:layout_centerVertical="true" />
        <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_certification_et_card" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x210" android:text="" android:hint="@string/apollo_uc_string_certification_cardno" android:singleLine="true" android:layout_centerVertical="true" android:inputType="number" />
        <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginLeft="@dimen/x40" android:layout_marginRight="@dimen/x40" android:layout_alignParentBottom="true" android:alpha="0.2" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/x130">
        <TextView android:textSize="@dimen/x32" android:textColor="@color/apollo_uc_c_59A3FF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x40" android:text="@string/apollo_uc_string_certification_bank_name" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_certification_et_yinghang" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x210" android:text="" android:hint="@string/apollo_uc_certification_bank_no" android:singleLine="true" android:layout_centerVertical="true" />
        <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginLeft="@dimen/x40" android:layout_marginRight="@dimen/x40" android:layout_alignParentBottom="true" android:alpha="0.2" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/x130">
        <TextView android:textSize="@dimen/x32" android:textColor="@color/apollo_uc_c_59A3FF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x40" android:text="@string/apollo_uc_certification_phone_no" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_certification_et_shouji" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x210" android:text="" android:hint="@string/apollo_uc_string_certification_bankleftphone" android:singleLine="true" android:maxLength="11" android:layout_centerVertical="true" android:inputType="number" />
        <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginLeft="@dimen/x40" android:layout_marginRight="@dimen/x40" android:layout_alignParentBottom="true" android:alpha="0.2" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/x130">
        <TextView android:textSize="@dimen/x32" android:textColor="@color/apollo_uc_c_59A3FF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x40" android:text="@string/apollo_uc_certification_check_code" android:layout_centerVertical="true" />
        <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_certification_et_yanzhengma" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x210" android:text="" android:hint="@string/apollo_uc_string_certification_checkcode" android:singleLine="true" android:maxLength="6" android:layout_centerVertical="true" android:inputType="number" />
        <TextView android:enabled="true" android:textColor="@color/apollo_uc_c_FFFFFF" android:gravity="center" android:id="@id/apollo_regist_get_checkcode" android:background="@drawable/apollo_uc_bg_certification_normal" android:paddingLeft="@dimen/x10" android:paddingTop="@dimen/x15" android:paddingRight="@dimen/x10" android:paddingBottom="@dimen/x15" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x40" android:text="@string/apollo_uc_regist_get_checkcode" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginLeft="@dimen/x40" android:layout_marginRight="@dimen/x40" android:layout_alignParentBottom="true" android:alpha="0.2" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x40" android:layout_marginTop="@dimen/x36" android:text="@string/apollo_uc_certification_phone_hint" />
    <RelativeLayout android:paddingLeft="@dimen/x40" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x20">
        <CheckBox android:id="@id/apollo_uc_certi_checkbox" android:background="@drawable/apollo_uc_checkbox_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:id="@id/apollo_uc_certi_protocal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x10" android:text="@string/apollo_uc_have_read_certi_protocal" android:layout_toRightOf="@id/apollo_uc_certi_checkbox" android:layout_centerVertical="true" />
    </RelativeLayout>
</LinearLayout>