<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/apollo_uc_c_FFFFFF" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/apollo_uc_line_D4D4D4" android:layout_width="fill_parent" android:layout_height="@dimen/x1" />
    <LinearLayout android:orientation="vertical" android:id="@id/apollo_regist_form_linear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <RelativeLayout android:paddingLeft="@dimen/x30" android:layout_width="fill_parent" android:layout_height="@dimen/x130">
            <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_reset_oldpwd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_reset_old_pwd" android:layout_centerVertical="true" />
            <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_reset_et_oldpwd" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x72" android:text="" android:hint="@string/apollo_uc_string_oldpwd" android:singleLine="true" android:maxLength="16" android:layout_toRightOf="@id/apollo_reset_oldpwd" android:layout_centerVertical="true" android:inputType="textPassword" />
            <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginRight="@dimen/x30" android:layout_alignParentBottom="true" android:alpha="0.2" />
        </RelativeLayout>
        <RelativeLayout android:paddingLeft="@dimen/x30" android:layout_width="fill_parent" android:layout_height="@dimen/x130">
            <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_reset_newpwd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_forget_new_password" android:layout_centerVertical="true" />
            <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_reset_et_newpwd" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x72" android:text="" android:hint="@string/apollo_uc_regist_pwd_" android:singleLine="true" android:maxLength="16" android:layout_toRightOf="@id/apollo_reset_newpwd" android:layout_centerVertical="true" android:inputType="textPassword" />
            <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginRight="@dimen/x30" android:layout_alignParentBottom="true" android:alpha="0.2" />
        </RelativeLayout>
        <RelativeLayout android:paddingLeft="@dimen/x30" android:layout_width="fill_parent" android:layout_height="@dimen/x130">
            <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_reset_newpwd_again" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_register_sure_pwd" android:layout_centerVertical="true" />
            <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_reset_et_newpwd_agien" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x40" android:text="" android:hint="@string/apollo_uc_string_newpwdagain" android:singleLine="true" android:maxLength="16" android:layout_toRightOf="@id/apollo_reset_newpwd_again" android:layout_centerVertical="true" android:inputType="textPassword" />
            <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginRight="@dimen/x30" android:layout_alignParentBottom="true" android:alpha="0.2" />
        </RelativeLayout>
        <RelativeLayout android:paddingLeft="@dimen/x30" android:layout_width="fill_parent" android:layout_height="@dimen/x130">
            <TextView android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_59A3FF" android:id="@id/apollo_reset_verify" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apollo_uc_register_verify_code" android:layout_centerVertical="true" />
            <EditText android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_333333" android:textColorHint="@color/apollo_uc_c_999999" android:id="@id/apollo_reset_et_vertify" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x72" android:text="" android:hint="@string/apollo_uc_string_vertifycode" android:singleLine="true" android:maxLength="6" android:layout_toRightOf="@id/apollo_reset_verify" android:layout_centerVertical="true" android:inputType="number" />
            <TextView android:enabled="true" android:textSize="@dimen/x28" android:textColor="@color/apollo_uc_c_FFFFFF" android:gravity="center" android:id="@id/apollo_reset_get_checkcode" android:background="@drawable/apollo_uc_register_btn_selector" android:clickable="true" android:layout_width="@dimen/x168" android:layout_height="@dimen/x68" android:layout_marginRight="@dimen/x40" android:text="@string/apollo_uc_regist_get_checkcode" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <View android:background="@color/apollo_uc_c_999999" android:layout_width="fill_parent" android:layout_height="@dimen/x1" android:layout_marginRight="@dimen/x30" android:layout_alignParentBottom="true" android:alpha="0.2" />
        </RelativeLayout>
        <Button android:enabled="false" android:textSize="@dimen/x36" android:textColor="@color/apollo_uc_c_FFFFFF" android:layout_gravity="center_horizontal" android:id="@id/apollo_uc_change_pwd_bt" android:background="@drawable/apollo_uc_register_btn_selector" android:layout_width="@dimen/x670" android:layout_height="@dimen/x100" android:layout_marginTop="@dimen/x80" android:text="@string/apollo_uc_sure" />
    </LinearLayout>
</RelativeLayout>